# alphafold-project

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: quality_structures_index.csv
data/processed/reports/: quality_processing_report.csv
data/raw/mappings/: id_list.csv
data/results/: atom_type_comparison.csv  atom_type_statistics.csv  atomic_analysis_report.json  atomic_classification_metrics.json  atomic_confusion_matrix_counts.csv  atomic_confusion_matrix_percentages.csv  atomic_correlations_matrix.csv  atomic_executive_summary.txt  chonsp_executive_summary.txt  complete_analysis_report.json  element_analysis_statistics.json  element_comparison_results.json  executive_summary_complete.txt  final_chonsp_comprehensive_report.json  statistical_results.json  strategic_extended_sweet_spot.csv  strategic_gold.csv  strategic_platinum.csv  strategic_scientific.csv
data/validated/: validated_pairs_index.csv  validation_summary.txt
docs/: PIPELINE.md
notebooks/: 01_descarga_y_mapeo.ipynb  02_validacion_pares.ipynb  03_limpieza_alineamiento.ipynb  04_analisis_estructural.ipynb  Primeros_pasos_comparativos.ipynb  alphafold2.ipynb  poratomo.ipynb
poster/: poster.tex
reports/latex/: main.tex  references.bib
reports/poster/: jury_notes.tex  poster.tex  presentacion_5min.tex
scripts/: download_more_af.py  generate_report_figures.py  rebuild_id_list.py
scripts/analysis/: analyze_structures_numeric.py
scripts/preprocessing/: download_proteins.py
src/alphafold_comparison/: __init__.py  __main__.py  config.py
(+16 files in other folders)
